[gd_scene load_steps=2 format=3 uid="uid://586s1pvfxxfx"]

[ext_resource type="Script" path="res://scripts/EnemySprite.gd" id="1_script"]

[node name="EnemySprite" type="CharacterBody2D"]
script = ExtResource("1_script")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="NameLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -57.0
text = "Enemy Name"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -40.0
value = 100.0
show_percentage = false

[node name="StatusContainer" type="HBoxContainer" parent="."]
offset_left = -40.0
offset_top = -35.0
offset_right = 40.0
offset_bottom = -25.0
alignment = 1
theme_override_constants/separation = 2

[node name="CastingBar" type="ProgressBar" parent="."]
visible = false
offset_left = -40.0
offset_top = -55.0
offset_right = 40.0
offset_bottom = -50.0
show_percentage = false